--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "rootpath": "^0.1.2"
