--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "Nodejs-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "rootpath": "^0.1.2"
-  }
+    "name": "API parkings clean architecture, typescript & mongoDB",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "tsc": "tsc",
+        "build": "rimraf dist && tsc",
+        "dev": "nodemon",
+        "start": "npm run build && node dist/server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/cors": "^2.8.9",
+        "@types/dotenv": "^8.2.0",
+        "@types/jsonwebtoken": "^8.5.0",
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "module-alias": "^2.2.2",
+        "rootpath": "^0.1.2",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3"
+    },
+    "_moduleAliases": {
+        "@": "dist"
+    }
 }
